--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>
 		
-		Business Labs Incorporated.<sup>c</sup>
+		Business Labs Incorporated.&copy;
 	</title>
 </head>
 <body>
