added udemy course css practical sheet

--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<style type="text/css">
+	
+	.profile li
+	{
+list-style: none;
+	 }	
+
+	 a:link,a:visited
+	 {
+text-decoration: none; #removing underline in links
+background-color:green;
+opacity: 0.6;
+border: 1px lightcoral ;
+color: black;
+float: left; #to transpose list from vertical to horizontal
+
+	 }
+		
+	</style>
 	<title>
 		
 		Business Labs Incorporated.&copy;
 	</title>
+
 </head>
 <body>
-<div >
-	About us
+<div  class="profile" >
+	<ul>
+		<li><a href="/" target="_blank">HOW WE HELP</a></li>
+		<li><a href="/" target="_blank">WHO WE ARE </a></li>
+		<li><a href="/" target="_blank">WORK WE'VE DONE</a></li>
+		<li><a href="/" target="_blank">INDUSTRY EXPERTISE</li>
+		<li><a href="/" target="_blank">INSIGHTS</li>
+		<li><a href="/" target="_blank">CONTACT</li>
+
+	</ul>
 </div>
 
 </body>
